lib/translator/test/fixtures/error/raw/const-assign.prg
PROGRAM const_assignment_error
BEGIN
    CONST INT waka = 1337
    waka = 42
END
